--- a/scrape_finlex/server/templates/index.html
+++ b/scrape_finlex/server/templates/index.html
@@ -33,6 +33,8 @@
         <form
           class="d-flex flex-column text-center m-auto w-auto h-auto"
           id="scrape-form"
+          action="/api/scrape"
+          method="POST"
         >
           <input
             type="url"
